@@ -23,13 +23,17 @@ struct s_diskinfo;
 
 int partlist_showlist(bool details);
 
+enum {BLKDEV_INVALID=-1, BLKDEV_PHYSDISK=0, BLKDEV_FILESYSDEV=1};
+
 struct s_blkdev
 {
+    int  devtype;
     char devname[FSA_MAX_DEVLEN];
     char longname[FSA_MAX_DEVLEN];
     char label[FSA_MAX_LABELLEN];
     char uuid[FSA_MAX_UUIDLEN];
     char fsname[FSA_MAX_FSNAMELEN];
+    char name[512];
     char txtsize[64];
     u64 devsize;
     char minor[16];
